exclusão de arquivos que não serão usados, correção para chamar script carrossel e img ocupando todo espaço

--- a/index.html
+++ b/index.html
@@ -55,17 +55,27 @@
             <div class="art2">
                 <h1>Sustentabilidade</h1>
                 <p>
-                  A sustentabilidade no agronegócio passou a ser um dos principais pilares do segmento e, praticamente, uma moeda de troca entre produtores, indústrias do ramo. 
-                  No entanto, mesmo sendo extremamente visada, a prática ainda não está muito bem estabelecida no Brasil.
-                  Mesmo com tantos desafios, o Brasil já parece se mover e estar pronto para essa nova etapa do agronegócio: mais limpo, mais consciente, mais diverso e mais respeitoso. Com alguma organizações tentando promover essa cultura, é possível que os nossos recursos naturais não sejam mais extintos ou entrem em escassez.
+                    A sustentabilidade no agronegócio passou a ser um dos principais pilares do segmento e,
+                    praticamente, uma moeda de troca entre produtores, indústrias do ramo.
+                    No entanto, mesmo sendo extremamente visada, a prática ainda não está muito bem estabelecida no
+                    Brasil.
+                    Mesmo com tantos desafios, o Brasil já parece se mover e estar pronto para essa nova etapa do
+                    agronegócio: mais limpo, mais consciente, mais diverso e mais respeitoso. Com alguma organizações
+                    tentando promover essa cultura, é possível que os nossos recursos naturais não sejam mais extintos
+                    ou entrem em escassez.
                 </p>
             </div>
             <div class="art2">
                 <h1>Inovação</h1>
                 <p>
-                  A Organização das Nações Unidas estima que a população mundial atingirá cerca de 10 bilhões de pessoas, em 2050. Quem alimentará esse enorme contingente de humanos e que continua crescendo? Certamente será o agricultor. Mas ele precisará fazê-lo com o mínimo impacto sobre a natureza, pois a sociedade está cada vez mais crítica sobre os potenciais danos ambientais que a agricultura pode causar.
-                  Nesse momento entra a INOVAÇÃO no agronegócio, com investimento em adubos orgânicos visando sempre a forma correta de utilizar os resíduos 
-                  na produção do adubo, contribuindo assim com meio ambiente e com mínimo de desperdício!
+                    A Organização das Nações Unidas estima que a população mundial atingirá cerca de 10 bilhões de
+                    pessoas, em 2050. Quem alimentará esse enorme contingente de humanos e que continua crescendo?
+                    Certamente será o agricultor. Mas ele precisará fazê-lo com o mínimo impacto sobre a natureza, pois
+                    a sociedade está cada vez mais crítica sobre os potenciais danos ambientais que a agricultura pode
+                    causar.
+                    Nesse momento entra a INOVAÇÃO no agronegócio, com investimento em adubos orgânicos visando sempre a
+                    forma correta de utilizar os resíduos
+                    na produção do adubo, contribuindo assim com meio ambiente e com mínimo de desperdício!
                 </p>
             </div>
         </article>
@@ -75,9 +85,12 @@
                     <div class="contentproje">
                         <h3>Triste realidade ATUAL</h3>
 
-                        <p>Hoje o Brasil é um dos maiores produtores de alimentos do mundo, porem nossa taxa de desperdício é maior
-                          do que qualquer outra nação. De acordo com relatório da PNUMA o índice de <strong>Desperdício</strong> de alimentos 
-                          disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para a lixeira.</p>
+                        <p>Hoje o Brasil é um dos maiores produtores de alimentos do mundo, porem nossa taxa de
+                            desperdício é maior
+                            do que qualquer outra nação. De acordo com relatório da PNUMA o índice de
+                            <strong>Desperdício</strong> de alimentos
+                            disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para
+                            a lixeira.</p>
 
                         <a href="#" class="bntproj">Saiba mais</a>
                     </div>
@@ -89,8 +102,10 @@
                     <div class="contentproje">
                         <h3>Descarte Correto</h3>
 
-                        <p>Se o descarte for <strong>Correto</strong> além de ajudar no combate a fome, será um grande avanço na <strong>Sustentabilidade</strong>
-                        do nosso sistema alimentares, redução das emissões de gases de efeito estufa e melhora a saúde de todo nosso planeta</p>
+                        <p>Se o descarte for <strong>Correto</strong> além de ajudar no combate a fome, será um grande
+                            avanço na <strong>Sustentabilidade</strong>
+                            do nosso sistema alimentares, redução das emissões de gases de efeito estufa e melhora a
+                            saúde de todo nosso planeta</p>
 
                         <a href="#" class="bntproj">Saiba mais</a>
                     </div>
@@ -101,9 +116,12 @@
                 <div class="slide">
                     <div class="contentproje">
                         <h3>Transformação da VIDA</h3>
-                        <p>Após um determinado período os resíduos passam pela transformação natural em adubo orgânico rico em 
-                          nutrientes, e perfeito para ser usado nas plantações novas, substituindo assim vários produtos quimicos usados 
-                          para suprir essa ausência de nutrientes naturais. Dando inicio assim ao ciclo natural da vida.
+                        <p>Após um determinado período os resíduos passam pela transformação natural em adubo orgânico
+                            rico em
+                            nutrientes, e perfeito para ser usado nas plantações novas, substituindo assim vários
+                            produtos quimicos usados
+                            para suprir essa ausência de nutrientes naturais. Dando inicio assim ao ciclo natural da
+                            vida.
                         </p>
 
                         <a href="#" class="bntproj">Saiba mais</a>
@@ -111,34 +129,37 @@
                 </div>
             </div>
             <div class="slide-container">
-              <div class="slide">
-                  <div class="contentproje">
-                      <h3>Nascimento Saudável</h3>
-                      <p>O surgimento da nova vida é expontâneo, logo as novas plantações nascem e com todos os nutrientes para a saúde 
-                        da humanidade, totalmente orgânico, livre de quimicas que a cada dia que passa prejudicam mais as pessoas.
-                      </p>
+                <div class="slide">
+                    <div class="contentproje">
+                        <h3>Nascimento Saudável</h3>
+                        <p>O surgimento da nova vida é expontâneo, logo as novas plantações nascem e com todos os
+                            nutrientes para a saúde
+                            da humanidade, totalmente orgânico, livre de quimicas que a cada dia que passa prejudicam
+                            mais as pessoas.
+                        </p>
 
-                      <a href="#" class="bntproj">Saiba mais</a>
-                  </div>
-              </div>
-          </div>
-          <div class="slide-container">
-            <div class="slide">
-                <div class="contentproje">
-                    <h3>Alimento Ricos na Mesa</h3>
-                    <p>Levando assim mais saúde bem estar e vida longa para todos. Com produtos mais saudáveis todos os dias na mesa.
-                      Garantindo assim a <strong>Sustentabilidade, Inovação, Tecnologia e ZERO DESPERDÍCIO</strong>
-                    </p>
-
-                    <a href="#" class="bntproj">Saiba mais</a>
+                        <a href="#" class="bntproj">Saiba mais</a>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="slide-container">
+                <div class="slide">
+                    <div class="contentproje">
+                        <h3>Alimento Ricos na Mesa</h3>
+                        <p>Levando assim mais saúde bem estar e vida longa para todos. Com produtos mais saudáveis todos
+                            os dias na mesa.
+                            Garantindo assim a <strong>Sustentabilidade, Inovação, Tecnologia e ZERO
+                                DESPERDÍCIO</strong>
+                        </p>
+
+                        <a href="#" class="bntproj">Saiba mais</a>
+                    </div>
+                </div>
+            </div>
 
 
-            <div id="prev" onclick="prev()">
-                < </div>
-                    <div id="next" onclick="next()"> > </div>
+            <div id="prev" onclick="prev()"> < </div>
+            <div id="next" onclick="next()"> > </div>
         </section>
 
 
@@ -213,7 +234,8 @@
                 </div>
                 <div class="content">
                     <p>Conheça os benefícios do adubo orgânico para a sua plantação!</p>
-                    <a href="https://ecoadubos.com.br/conheca-os-beneficios-do-adubo-organico/" target="_blank">Veja mais</a>
+                    <a href="https://ecoadubos.com.br/conheca-os-beneficios-do-adubo-organico/" target="_blank">Veja
+                        mais</a>
                 </div>
             </div>
 
@@ -260,7 +282,7 @@
     </footer>
 
     <script src="./js/header.js"></script>
-    <script src="./JS/carousel.js"></script>
+    <script src="./js/carousel.js"></script>
 
 
 
