pagina de cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -40,34 +40,39 @@
         </nav>
     </header>
     <main>
+        <div class="opacity">
+            <div class="box">
+            </div>
+        </div>
 
+        <div class="texto-cadastro">
+            <h2>Realize seu cadastro como doador parceiro!</h2>
+        </div>
 
+        <div class="formulario-container">
+            <form>
+                <div class="form-doador">
 
+                    <label for="nome">Nome Completo:</label>
+                    <input type="text" id="nome" name="nome">
 
-        <form>
-            <div class="form-doador">
-                <h2>Realize seu cadastro como doador parceiro!</h2>
+                    <label for="cpfCnpj">CPF/CNPJ:</label>
+                    <input type="text" id="cpfCnpj" name="cpfCnpj">
 
-                <label for="nome">Nome Completo:</label>
-                <input type="text" id="nome" name="nome">
+                    <label for="login">Email Login:</label>
+                    <input type="text" id="login" name="login">
 
-                <label for="cpfCnpj">CPF/CNPJ:</label>
-                <input type="text" id="cpfCnpj" name="cpfCnpj">
+                    <label for="senha">Senha:</label>
+                    <input type="password" id="senha" name="senha">
 
-                <label for="login">Email Login:</label>
-                <input type="text" id="login" name="login">
+                    <label for="senha">Confirmar Senha:</label>
+                    <input type="password" id="senhav" name="senha">
 
-                <label for="senha">Senha:</label>
-                <input type="password" id="senha" name="senha">
+                    <label for="telefone">Telefone:</label>
+                    <input type="text" id="modelo" name="telefone">
 
-                <label for="senha">Confirmar Senha:</label>
-                <input type="password" id="senhav" name="senha">
-
-                <label for="telefone">Telefone:</label>
-                <input type="text" id="modelo" name="telefone">
-
-                <label for="area">Área de atuação</label>
-                <select id="area">
+                    <label for="area">Área de atuação</label>
+                    <select id="area">
                 <option value="varejo" selected>Varejo</option>
                 <option value="supermercado">Supermercado</option>
                 <option value="hortifruti">Hortifruti</option>
@@ -77,17 +82,17 @@
                 <option value="outros">Outros</option>
             </select>
 
-                <input type="submit" name="Enviar">
+                    <input type="submit" name="Enviar">
 
-            </div>
-        </form>
-
-        <div class="texto-impacto">
-            <h1>O futuro depende de nós!</h1>
+                </div>
+            </form>
         </div>
 
-
     </main>
+
+    <div class="texto-impacto">
+        <h1>O futuro depende de nós!</h1>
+    </div>
 
 
 
