ajustes e organização de código

--- a/pontosColeta.html
+++ b/pontosColeta.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/formulario.css">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/carousel.css">
+    <link rel="stylesheet" href="./css/pontosColeta.css">
 
 
 
@@ -49,45 +47,7 @@
             <h2>Realize seu cadastro como doador parceiro!</h2>
         </div>
 
-        <div class="formulario-container">
-            <form>
-                <div class="form-doador">
-
-                    <label for="nome">Nome Completo:</label>
-                    <input type="text" id="nome" name="nome">
-
-                    <label for="cpfCnpj">CPF/CNPJ:</label>
-                    <input type="text" id="cpfCnpj" name="cpfCnpj">
-
-                    <label for="login">Email Login:</label>
-                    <input type="text" id="login" name="login">
-
-                    <label for="senha">Senha:</label>
-                    <input type="password" id="senha" name="senha">
-
-                    <label for="senha">Confirmar Senha:</label>
-                    <input type="password" id="senhav" name="senha">
-
-                    <label for="telefone">Telefone:</label>
-                    <input type="text" id="modelo" name="telefone">
-
-                    <label for="area">Área de atuação</label>
-                    <select id="area">
-                <option value="varejo" selected>Varejo</option>
-                <option value="supermercado">Supermercado</option>
-                <option value="hortifruti">Hortifruti</option>
-                <option value="restaurante">Restaurante</option>
-                <option value="produtor rural">Produtor Rural</option>
-                <option value="cooperativa">Cooperativa</option>
-                <option value="outros">Outros</option>
-            </select>
-
-                    <input type="submit" name="Enviar">
-
-                </div>
-            </form>
-        </div>
-
+        
     </main>
 
     <div class="texto-impacto">
