--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/formulario.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/carousel.css">
 
@@ -243,6 +244,52 @@
 
 
     </main>
+
+    
+    <div class="formulario-modal">
+        <form>
+            <div class="form-doador">
+
+                <div class="fechar">✘</div>
+
+                <input type="radio" id="doador" name="col_doa" value="doador"> 
+                <label for="doador" class="radio"> Doador Parceiro</label>
+                
+                <input type="radio" id="coletor" name="col_doa" value="coletor"> 
+                <label for="coletor" class="radio"> Coletor </label>
+
+                <input type="text" id="nome" name="nome" placeholder="Nome Completo">
+
+                <input type="text" id="cpfCnpj" name="cpfCnpj" placeholder="CPF/CNPJ">
+
+                <label for="login">Login:</label>
+                <input type="text" id="login" name="login" placeholder="exemplo@email.com">
+
+                <label for="senha">Senha:</label>
+                <input type="password" id="senha" name="senha">
+
+                <label for="senha">Confirmar Senha:</label>
+                <input type="password" id="senhav" name="senha">
+
+                <label for="telefone">Telefone:</label>
+                <input type="text" id="modelo" name="telefone">
+
+                <label for="area">Área de atuação:</label>
+                <select id="area">
+                    <option value="varejo" selected>Varejo</option>
+                    <option value="supermercado">Supermercado</option>
+                    <option value="hortifruti">Hortifruti</option>
+                    <option value="restaurante">Restaurante</option>
+                    <option value="produtor rural">Produtor Rural</option>
+                    <option value="cooperativa">Cooperativa</option>
+                    <option value="outros">Outros</option>
+                </select>
+
+                <input type="submit" name="Enviar">
+
+            </div>
+        </form>
+    </div>
 
 
 
