--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="cadastro">
             <div class="cadastro1">
                 <h1 class="user">Fornecedores de Insumos</h1>
-                <a href="cadastro.html"> <button class="btn btn-success">Cadastre-se Aqui!</button></a>
+                <button class="btn btn-success btn-form" onclick="abrir()">Cadastre-se Aqui!</button>
                 <h1 class="user">Interessados: </h1>
                 <button class="btn btn-success">Cadastre-se Aqui!</button>
             </div>
@@ -250,7 +250,7 @@
         <form>
             <div class="form-doador">
 
-                <div class="fechar">✘</div>
+                <div class="fechar" onclick="fechar()">✘</div>
 
                 <input type="radio" id="doador" name="col_doa" value="doador"> 
                 <label for="doador" class="radio"> Doador Parceiro</label>
@@ -258,21 +258,21 @@
                 <input type="radio" id="coletor" name="col_doa" value="coletor"> 
                 <label for="coletor" class="radio"> Coletor </label>
 
-                <input type="text" id="nome" name="nome" placeholder="Nome Completo">
+                <input type="text" id="nome" name="nome" placeholder="Nome Completo" required>
 
-                <input type="text" id="cpfCnpj" name="cpfCnpj" placeholder="CPF/CNPJ">
+                <input type="text" id="cpfCnpj" name="cpfCnpj" placeholder="CPF/CNPJ" required>
 
                 <label for="login">Login:</label>
-                <input type="text" id="login" name="login" placeholder="exemplo@email.com">
+                <input type="text" id="login" name="login" placeholder="exemplo@email.com" required>
 
                 <label for="senha">Senha:</label>
-                <input type="password" id="senha" name="senha">
+                <input type="password" id="senha" name="senha" required>
 
                 <label for="senha">Confirmar Senha:</label>
-                <input type="password" id="senhav" name="senha">
+                <input type="password" id="senhav" name="senha" required>
 
                 <label for="telefone">Telefone:</label>
-                <input type="text" id="modelo" name="telefone">
+                <input type="text" id="modelo" name="telefone" required>
 
                 <label for="area">Área de atuação:</label>
                 <select id="area">
@@ -329,6 +329,7 @@
     </footer>
 
     <script src="./js/header.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./js/carousel.js"></script>
 
 
