retirada classe que não utilizei

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="cadastro">
             <div class="cadastro1">
                 <h1 class="user">Fornecedores de Insumos</h1>
-                <button class="btn btn-success btn-form" onclick="abrir()">Cadastre-se Aqui!</button>
+                <button class="btn btn-success" onclick="abrir()">Cadastre-se Aqui!</button>
                 <h1 class="user">Interessados: </h1>
                 <button class="btn btn-success">Cadastre-se Aqui!</button>
             </div>
