implementação e ajustes formulário de coleta

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
     </footer>
 
     <script src="./js/header.js"></script>
-    <script src="./js/modal.js"></script>
+    <script src="./js/formulario.js"></script>
     <script src="./js/carousel.js"></script>
 
 
