--- a/index.html
+++ b/index.html
@@ -41,15 +41,87 @@
     </header>
     <main>
 
+        <section class="containerproje">
+            <div class="slide-container active">
+                <div class="slide">
+                    <div class="contentproje">
+                        <h3>Triste realidade ATUAL</h3>
 
+                        <p>Hoje o Brasil é um dos maiores produtores de alimentos do mundo, porem nossa taxa de
+                            desperdício é maior
+                            do que qualquer outra nação. De acordo com relatório da PNUMA o índice de
+                            <strong>Desperdício</strong> de alimentos
+                            disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para
+                            a lixeira.</p>
 
-        <section class="cadastro">
-            <div class="cadastro1">
-                <h1 class="user">Fornecedores de Insumos</h1>
-                <button class="btn btn-success" onclick="abrir()">Cadastre-se Aqui!</button>
-                <h1 class="user">Interessados: </h1>
-                <button class="btn btn-success">Cadastre-se Aqui!</button>
+                        <a href="#" class="bntproj">Participe!</a>
+                    </div>
+                </div>
             </div>
+
+            <div class="slide-container">
+                <div class="slide">
+                    <div class="contentproje">
+                        <h3>Descarte Correto</h3>
+
+                        <p>Se o descarte for <strong>Correto</strong> além de ajudar no combate a fome, será um grande
+                            avanço na <strong>Sustentabilidade</strong>
+                            do nosso sistema alimentares, redução das emissões de gases de efeito estufa e melhora a
+                            saúde de todo nosso planeta</p>
+
+                        <a href="#" class="bntproj">Participe!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="slide-container">
+                <div class="slide">
+                    <div class="contentproje">
+                        <h3>Transformação da VIDA</h3>
+                        <p>Após um determinado período os resíduos passam pela transformação natural em adubo orgânico
+                            rico em
+                            nutrientes, e perfeito para ser usado nas plantações novas, substituindo assim vários
+                            produtos quimicos usados
+                            para suprir essa ausência de nutrientes naturais. Dando inicio assim ao ciclo natural da
+                            vida.
+                        </p>
+
+                        <a href="#" class="bntproj">Participe!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="slide-container">
+                <div class="slide">
+                    <div class="contentproje">
+                        <h3>Nascimento Saudável</h3>
+                        <p>O surgimento da nova vida é expontâneo, logo as novas plantações nascem e com todos os
+                            nutrientes para a saúde
+                            da humanidade, totalmente orgânico, livre de quimicas que a cada dia que passa prejudicam
+                            mais as pessoas.
+                        </p>
+
+                        <a href="#" class="bntproj">Participe!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="slide-container">
+                <div class="slide">
+                    <div class="contentproje">
+                        <h3>Alimento Ricos na Mesa</h3>
+                        <p>Levando assim mais saúde bem estar e vida longa para todos. Com produtos mais saudáveis todos
+                            os dias na mesa.
+                            Garantindo assim a <strong>Sustentabilidade, Inovação, Tecnologia e ZERO
+                                DESPERDÍCIO</strong>
+                        </p>
+
+                        <a href="#" class="bntproj">Participe!</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div id="prev" onclick="prev()"> < </div>
+            <div id="next" onclick="next()"> > </div>
         </section>
 
         <article class="art">
@@ -80,88 +152,6 @@
                 </p>
             </div>
         </article>
-        <section class="containerproje">
-            <div class="slide-container active">
-                <div class="slide">
-                    <div class="contentproje">
-                        <h3>Triste realidade ATUAL</h3>
-
-                        <p>Hoje o Brasil é um dos maiores produtores de alimentos do mundo, porem nossa taxa de
-                            desperdício é maior
-                            do que qualquer outra nação. De acordo com relatório da PNUMA o índice de
-                            <strong>Desperdício</strong> de alimentos
-                            disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para
-                            a lixeira.</p>
-
-                        <a href="#" class="bntproj">Saiba mais</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="slide-container">
-                <div class="slide">
-                    <div class="contentproje">
-                        <h3>Descarte Correto</h3>
-
-                        <p>Se o descarte for <strong>Correto</strong> além de ajudar no combate a fome, será um grande
-                            avanço na <strong>Sustentabilidade</strong>
-                            do nosso sistema alimentares, redução das emissões de gases de efeito estufa e melhora a
-                            saúde de todo nosso planeta</p>
-
-                        <a href="#" class="bntproj">Saiba mais</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="slide-container">
-                <div class="slide">
-                    <div class="contentproje">
-                        <h3>Transformação da VIDA</h3>
-                        <p>Após um determinado período os resíduos passam pela transformação natural em adubo orgânico
-                            rico em
-                            nutrientes, e perfeito para ser usado nas plantações novas, substituindo assim vários
-                            produtos quimicos usados
-                            para suprir essa ausência de nutrientes naturais. Dando inicio assim ao ciclo natural da
-                            vida.
-                        </p>
-
-                        <a href="#" class="bntproj">Saiba mais</a>
-                    </div>
-                </div>
-            </div>
-            <div class="slide-container">
-                <div class="slide">
-                    <div class="contentproje">
-                        <h3>Nascimento Saudável</h3>
-                        <p>O surgimento da nova vida é expontâneo, logo as novas plantações nascem e com todos os
-                            nutrientes para a saúde
-                            da humanidade, totalmente orgânico, livre de quimicas que a cada dia que passa prejudicam
-                            mais as pessoas.
-                        </p>
-
-                        <a href="#" class="bntproj">Saiba mais</a>
-                    </div>
-                </div>
-            </div>
-            <div class="slide-container">
-                <div class="slide">
-                    <div class="contentproje">
-                        <h3>Alimento Ricos na Mesa</h3>
-                        <p>Levando assim mais saúde bem estar e vida longa para todos. Com produtos mais saudáveis todos
-                            os dias na mesa.
-                            Garantindo assim a <strong>Sustentabilidade, Inovação, Tecnologia e ZERO
-                                DESPERDÍCIO</strong>
-                        </p>
-
-                        <a href="#" class="bntproj">Saiba mais</a>
-                    </div>
-                </div>
-            </div>
-
-
-            <div id="prev" onclick="prev()"> < </div>
-            <div id="next" onclick="next()"> > </div>
-        </section>
 
 
         <div class="texto-inicial">
@@ -213,32 +203,6 @@
                 e a distribuição. De todas as frutas e vegetais que vão para o lixo no Brasil, cerca de 50% são perdidas
                 durante o transporte e manuseio,
                 processamento e distribuição.</p>
-
-        </div>
-
-        <div class="container">
-            <!--Primeiro Card-->
-            <div class="card">
-                <div class="imagens">
-                    <img src="./Imagens/img tratadas/Cards/producao-agricola.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>Consumo consciente! A responsabilidade é nossa!</p>
-                    <a href="https://croplifebrasil.org/noticias/desperdicio-de-alimentos-no-mundo-o-problema-tambem-e-nosso/"
-                        target="_blank">Veja mais</a>
-                </div>
-            </div>
-            <!--Segundo Card-->
-            <div class="card">
-                <div class="imagens">
-                    <img src="./Imagens/img tratadas/Cards/desperdicio-de-alimentos.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>Conheça os benefícios do adubo orgânico para a sua plantação!</p>
-                    <a href="https://ecoadubos.com.br/conheca-os-beneficios-do-adubo-organico/" target="_blank">Veja
-                        mais</a>
-                </div>
-            </div>
 
         </div>
 
