feat js dos cads front

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <option value="outros">Outros</option>
                 </select>
 
-                <input type="submit" name="Enviar">
+                <input type="submit" name="Enviar" onclick="fetchApiSubmit()">
 
             </div>
         </form>
@@ -295,7 +295,7 @@
     <script src="./js/header.js"></script>
     <script src="./js/formulario.js"></script>
     <script src="./js/carousel.js"></script>
-
+    <script src="./js/cadUsers.js"></script>
 
 
 </body>
