feat login no html e JS

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             disponíveis aos consumidores está cada vez mais alto. Cerca de 17% dos alimentos foram para
                             a lixeira.</p>
 
-                        <a href="#" class="bntproj">Participe!</a>
+                        <a href="#" class="bntproj" onclick="abrir()">Participe!</a>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                             do nosso sistema alimentares, redução das emissões de gases de efeito estufa e melhora a
                             saúde de todo nosso planeta</p>
 
-                        <a href="#" class="bntproj">Participe!</a>
+                        <a href="#" class="bntproj" onclick="abrir()">Participe!</a>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                             vida.
                         </p>
 
-                        <a href="#" class="bntproj">Participe!</a>
+                        <a href="#" class="bntproj" onclick="abrir()">Participe!</a>
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                             mais as pessoas.
                         </p>
 
-                        <a href="#" class="bntproj">Participe!</a>
+                        <a href="#" class="bntproj" onclick="abrir()">Participe!</a>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                                 DESPERDÍCIO</strong>
                         </p>
 
-                        <a href="#" class="bntproj">Participe!</a>
+                        <a href="#" class="bntproj" onclick="abrir()">Participe!</a>
                     </div>
                 </div>
             </div>
@@ -249,7 +249,7 @@
                     <option value="outros">Outros</option>
                 </select>
 
-                <input type="submit" name="Enviar" onclick="fetchApiSubmit()">
+                <input type="submit" name="Enviar" onclick="fetchApiSubmit(); fechar();">
 
             </div>
         </form>
@@ -296,6 +296,7 @@
     <script src="./js/formulario.js"></script>
     <script src="./js/carousel.js"></script>
     <script src="./js/cadUsers.js"></script>
+    <script src="./js/login.js"></script>
 
 
 </body>
