feat/ login update

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <ul class="nav-list">
                 <li><a href="/">Home</a></li>
                 <li><a href="/">Parceiros</a></li>
-                <li><a href="/">Login</a></li>
+                <li><a href="loginteste.html">Login</a>
+                    
+                </li>
                 <li><a href="/">Contato</a></li>
             </ul>
 
