feat update login

--- a/index.html
+++ b/index.html
@@ -234,9 +234,6 @@
                 <label for="senha">Senha:</label>
                 <input type="password" id="senha" name="senha" required>
 
-                <label for="senha">Confirmar Senha:</label>
-                <input type="password" id="senhav" name="senha" required>
-
                 <label for="telefone">Telefone:</label>
                 <input type="text" id="modelo" name="telefone" required>
 
@@ -298,7 +295,7 @@
     <script src="./js/formulario.js"></script>
     <script src="./js/carousel.js"></script>
     <script src="./js/cadUsers.js"></script>
-    <script src="./js/login.js"></script>
+   <!--  <script src="./js/login.js"></script> -->
 
 
 </body>
