--- a/loginteste.html
+++ b/loginteste.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/testelogin.css">
 </head>
 <body>
     <div class="modalLogin" id="modalLogin">
@@ -18,10 +19,10 @@
             <label for="senha">Senha:</label>
             <input type="password" id="campoPassword" name="senha" required>
 
-            <input type="submit" name="Enviar" onclick="fetchApiSubmitLogin()">
+            <a href="#" class="bntproj" onclick="fetchApiSubmitLogin()">Participe!</a>
         </div>
     </div>
-    <input type="text" id="respost"></input>
-    <script src="login.js"></script>
+    <p  id="respost"></p>
+    <script src="./js/login.js"></script>
 </body>
 </html>
