--- a/loginteste.html
+++ b/loginteste.html
@@ -16,7 +16,7 @@
 
             <h2>Realize o login para continuar!</h2>
 
-            <div class="fechar" onclick="fechar()">✘</div>           
+            <div class="fechar" onclick="fecharLogin()">✘</div>           
 
             <label for="login">Login:</label>
             <input type="text" id="campoLogin" name="login" placeholder="exemplo@email.com" required>
