ajustes finais do modal login, organização css formulários, implementando login pagina pontosColeta

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                 <div class="fechar" onclick="fecharLogin()">✘</div>           
                 
-                <h2>Realize o login para continuar!</h2>
+                <h2>Realize o login para continuar!</h2> <br>
 
                 <label for="login">Login:</label>
                 <input type="text" id="campoLogin" name="login" placeholder="exemplo@email.com" required>
