link script do login na pag pontosColeta

--- a/pontosColeta.html
+++ b/pontosColeta.html
@@ -161,6 +161,7 @@
 
     <script src="./js/header.js"></script>
     <script src="./js/formulario.js"></script>
+    <script src="./js/login.js"></script>
     <script src="./js/cadEndereco.js"></script>
 
 
