inclusão dos cards dos depoimentos e botão voltar ao topo na home

--- a/index.html
+++ b/index.html
@@ -241,8 +241,9 @@
         </form>
     </div>
 
-
-
+    <div id="voltarTopo">
+        <a href="#" id="subir"><img src="./Imagens/img tratadas/icons/seta-para-cima.png" alt=""></a>
+    </div>
     <footer>
 
         <div class="coluna" id="col1">
@@ -297,6 +298,8 @@
     <script src="./js/carousel.js"></script>
     <script src="./js/cadUsers.js"></script>
     <script src="./js/login.js"></script>
+    <script src="./js/botaoTopo.js"></script>
+
 
 
 </body>
