--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <nav class="menu">
-            <a class="logo" href="/">Logo</a>
+            <a class="logo" href="/">LOGO</a>
 
             <div class="mobile-menu">
                 <div class="line1"></div>
@@ -47,10 +47,10 @@
             <div class="slide-container active">
                 <div class="slide">
                     <div class="contentproje">
-                        <h3>Agricultura e Comercio<br> JUNTOS</h3>
-                        <p>Contra o desperdício, e a fome.<br> Pela Sustentabilidade e a vida no nosso PLANETA!
+                        <h3>Agricultura e Comercio<br> JUNTOS</h3><br>
+                        <p>Contra o desperdício, e a fome.<br> Pela Sustentabilidade e a vida no nosso PLANETA!</p>
 
-                            <a href="#" class="bntproj" onclick="abrir()">Participe!</a>
+                        <a href="#" class="bntproj" onclick="abrir()">Conheça!</a>
 
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                         <h3>Doador comunica Alimentos<br> Disponíveis</h3>
                         <p>O doador expoe na plataforma que tem resíduos improprios para venda no seu Comercio.</p>
 
-                        <a href="#" class="bntproj" onclick="abrir()">Participe!</a>
+                        <a href="#" class="bntproj" onclick="abrir()">Conheça!</a>
                     </div>
                 </div>
             </div>
@@ -71,34 +71,34 @@
             <div class="slide-container">
                 <div class="slide">
                     <div class="contentproje">
-                        <h3>O interessado faz o tratamento.</h3>
+                        <h3>O interessado faz o tratamento.</h3><br>
                         <p>O interessado trata a coleta e transporte do resídos doados, para seu devido tratamento, distante dos grandes centros Urbanos.
                         </p>
 
-                        <a href="#" class="bntproj" onclick="abrir()">Participe!</a>
+                        <a href="#" class="bntproj" onclick="abrir()">Conheça!</a>
                     </div>
                 </div>
             </div>
             <div class="slide-container">
                 <div class="slide">
                     <div class="contentproje">
-                        <h3>Processos de utilização final</h3>
+                        <h3>Processos de utilização final</h3><br>
                         <p>Os alimentos que são improprios tambem para consumo animal, passam pelo processo de Compostagem para transforma-se em adubo orgânico.
                         </p>
 
-                        <a href="#" class="bntproj" onclick="abrir()">Participe!</a>
+                        <a href="#" class="bntproj" onclick="abrir()">Conheça!</a>
                     </div>
                 </div>
             </div>
             <div class="slide-container">
                 <div class="slide">
                     <div class="contentproje">
-                        <h3>Nada se perde, tudo vira VIDA</h3>
+                        <h3>Nada se perde, tudo vira VIDA</h3><br>
                         <p>Todo resído final apos processo de compostagem, gera um adubo especial para ser usado em novas plantações na geração de alimentos Orgânicos! Garantindo assim a <strong>Sustentabilidade, Inovação, Tecnologia e ZERO
                                 DESPERDÍCIO</strong>
                         </p>
 
-                        <a href="#" class="bntproj" onclick="abrir()">Participe!</a>
+                        <a href="#" class="bntproj" onclick="abrir()">Conheça!</a>
                     </div>
                 </div>
             </div>
@@ -138,43 +138,38 @@
 
         <div class="gallery-container">
             <div class="gallery-items">
-                <p class="txtcima">Aqui se inicia o processo onde os resíduos são colocados para compostagem.</p>
+                <button class="Galery">
                 <a href="#">
-                    <img src="./Imagens/Compostagem tipos/1.jpg" alt="compostagem">
+                    <img src="./Imagens/Compostagem tipos/1.jpg" alt="compostagem">Saiba mais
                 </a>
+                </button>
             </div>
             <div class="gallery-items">
-                <p class="txtcima">Ficam mantidos nesse processo de decomposição ate que seja absorvido parcialmente pela terra.</p>
                 <a href="#">
                     <img src="./Imagens/Compostagem tipos/2.jpg" alt="compostagem">
                 </a>
             </div>
             <div class="gallery-items">
-                <p class="txtcima">Nesse momento todo resíduo e coberto tambem com terra, o que vai gerar um volume maior de terra adubada.</p>
                 <a href="#">
                     <img src="./Imagens/Compostagem tipos/3.jpeg" alt="compostagem">
                 </a>
             </div>
             <div class="gallery-items">
-                <p class="txtcima">Inicia-se então o processo de "regagem" onde molha-se todo o material ate que fique bem umida para ocorrer a mistura natural.</p>
                 <a href="#">
                     <img src="./Imagens/Compostagem tipos/4.jfif" alt="compostagem">
                 </a>
             </div>
             <div class="gallery-items">
-                <p class="txtcima">Quando os redíduos estiverem bem homogênio ja estamos nas etapais finais.</p>
                 <a href="#">
                     <img src="./Imagens/Compostagem tipos/5.png" alt="compostagem">
                 </a>
             </div>
             <div class="gallery-items">
-                <p class="txtcima">Sei la que diabos é isso aqui Ana.</p>
                 <a href="#">
                     <img src="./Imagens/Compostagem tipos/6.jpg" alt="compostagem">
                 </a>
             </div>
             <div class="gallery-items">
-                <p class="txtcima">após determinado tempo, o processo é concluido e a terra esta pronta para ser usada como adubo, e o melhor totalmente ORGÂNICO.</p>
                 <a href="#">
                     <img src="./Imagens/Compostagem tipos/7.webp" alt="compostagem">
                 </a>
