correções no index e parceiros para funcionamento dos cadastros

--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
             </div>
         </article>
 
-
         <div class="texto-inicial">
             <h1 class="reflex">PROFISSIONAIS TRANSFORMANDO SEU RESÍDUO EM ADUBO ORGÂNICO.</h1>
             <h1 class="reflex">TRANSORME SEU AGRONEGÓCIO</h1>
@@ -198,7 +197,6 @@
             </div>
         </div>
 
-
         <div class="texto-impacto">
             <h1>O futuro depende de nós!</h1>
             <h2>Principais fontes de <b>desperdício</b> e perdas de alimentos:</h2>
@@ -209,24 +207,19 @@
 
         </div>
 
-
     </main>
-
 
     <div class="formulario-modal">
         <form>
             <div class="form-doador">
 
-
                 <div class="fechar" onclick="fechar()">✘</div>
 
-
                 <h2>Cadastre-se!</h2>
-                <input type="radio" id="doador" class="coletor_doador" name="col_doa" value="doador">
+                <input type="radio" id="doador" class="coletor_doador" name="col_doa" value="doador" checked>
                 <label for="doador" class="radio"> Doador Parceiro</label>
 
                 <input type="radio" id="coletor" class="coletor_doador" name="col_doa" value="coletor">
-
                 <label for="coletor" class="radio"> Coletor </label>
 
                 <input type="text" id="nome" name="nome" placeholder="Nome Completo*" required>
@@ -240,7 +233,7 @@
                 <input type="password" id="senha" name="senha" required>
 
                 <label for="telefone">Telefone:*</label>
-                <input type="number" id="modelo" name="telefone" required>
+                <input type="number" id="telefone" name="telefone" required>
 
                 <label for="area">Área de atuação:*</label>
                 <select id="areaAtuacao">
@@ -253,7 +246,7 @@
                     <option value="outros">Outros</option>
                 </select>
 
-                <input type="submit" name="Enviar" onclick="fetchApiSubmit(); fechar();">
+                <input type="button" value="Enviar" name="Enviar" onclick="fetchApiSubmit(); fechar();">
 
             </div>
         </form>
@@ -318,8 +311,6 @@
     <script src="./js/cadUsers.js"></script>
     <script src="./js/login.js"></script>
     <script src="./js/botaoTopo.js"></script>
-
-    <!--  <script src="./js/login.js"></script> -->
 </body>
 
 </html>
