--- a/pontosColeta.html
+++ b/pontosColeta.html
@@ -58,8 +58,8 @@
                 <h2>Dados do ponto de coleta:</h2> <br>
 
                 <label for="nomefantasia">Nome fantasia/Razão Social:*</label>
-                <input type="text" id="nome" name="nomefantasia" placeholder="Mercado do José" required>             
-            
+                <input type="text" id="nome" name="nomefantasia" placeholder="Mercado do José" required>
+
                 <label for="logradouro">Rua:*</label>
                 <input type="text" id="logradouro" name="logradouro" required>
 
@@ -120,92 +120,88 @@
 
 
 
-    <section class="sessao-depoimentos">
-        <div class="texto-depoimento">
-            <h1>Depoimentos dos parceiros</h1>
-            <p></p>
+
+    <div class="texto-depoimento">
+        <h1>Depoimentos dos parceiros</h1>
+
+    </div>
+
+    <section class="depoimento">
+
+        <div id="container">
+            <div id="carta">
+                <div id="frente">
+                    <img src="./Imagens/img tratadas/Cards/foto3.jfif" alt="">
+                    <h3>Ítalo Guerra</h3>
+
+                </div>
+
+                <div id="atras">
+                    <h2>Depoimento</h2>
+                    <p>“Após aderir ao projeto Resíduos Organicos, percebi que estou tendo maior rendimento, qualidade e uniformidade nas coletas. O nosso foco agora é despedício zero”
+
+                    </p>
+                </div>
+
+            </div>
         </div>
-        <section class="depoimento">
-
-            <div id="container">
-                <div id="carta">
-                    <div id="frente">
-                        <img src="./Imagens/img tratadas/Cards/foto1.jfif" alt="">
-                        <h3>Alexia Meirelles</h3>
-                    </div>
-
-                    <div id="atras">
-                        <h2>Depoimento</h2>
-                        <p>"Gostaria de parabenizar a todos que fazem parte deste projeto. Soluções como essas que visam
-                            a sustentabilidade, redução de desperdício são fundamentais nos dias atuais."
-                        </p>
 
 
-                    </div>
+
+
+        <div id="container">
+            <div id="carta">
+                <div id="frente">
+                    <img src="./Imagens/img tratadas/Cards/foto1.jfif" alt="">
+                    <h3>Alexia Meirelles</h3>
                 </div>
-            </div>
 
+                <div id="atras">
+                    <h2>Depoimento</h2>
+                    <p>"Gostaria de parabenizar a todos que fazem parte deste projeto. Soluções como essas que visam a sustentabilidade, redução de desperdício são fundamentais nos dias atuais."
+                    </p>
 
-            <div id="container">
-                <div id="carta">
-                    <div id="frente">
-                        <img src="./Imagens/img tratadas/Cards/foto3.jfif" alt="">
-                        <h3>Ítalo Guerra</h3>
-
-                    </div>
-
-
-                    <div id="atras">
-                        <h2>Depoimento</h2>
-                        <p>“Após aderir ao projeto Resíduos Organicos, percebi que estou tendo maior rendimento,
-                            qualidade e uniformidade nas coletas. O nosso foco agora é despedício zero”
-
-                        </p>
-                    </div>
 
                 </div>
             </div>
-        </section>
+        </div>
 
 
 
-        <section class="depoimento">
 
-            <div id="container">
-                <div id="carta">
-                    <div id="frente"><img src="./Imagens/img tratadas/Cards/foto2.jfif" alt="">
-                        <h3>João Medeiros</h3>
-                    </div>
+        <div id="container">
+            <div id="carta">
+                <div id="frente"><img src="./Imagens/img tratadas/Cards/foto2.jfif" alt="">
+                    <h3>João Medeiros</h3>
+                </div>
 
-                    <div id="atras">
-                        <h2>Depoimento</h2>
-                        <p>Levando em consideração o desperdício, sustentabilidade e rentabilidade, sempre buscamos
-                            soluções eficientes e inivadoras.
+                <div id="atras">
+                    <h2>Depoimento</h2>
+                    <p>"Levando em consideração o desperdício, sustentabilidade e rentabilidade, sempre buscamos soluções eficientes e inivadoras."
                         <p>
-                    </div>
                 </div>
             </div>
+        </div>
 
-            <div id="container">
-                <div id="carta">
-                    <div id="frente">
-                        <img src="./Imagens/img tratadas/Cards/foto4.jfif" alt="">
-                        <h3>Priscila Sena</h3>
-                    </div>
+        <div id="container">
+            <div id="carta">
+                <div id="frente">
+                    <img src="./Imagens/img tratadas/Cards/foto4.jfif" alt="">
+                    <h3>Priscila Sena</h3>
+                </div>
 
 
-                    <div id="atras">
-                        <h2>Depoimento</h2>
-                        <p>Sou pequena agricultura. Hoje temos um percentiual de desperdício em torno de 10%. Poder
-                            contar com um projeto desse tipo fará diferença.
-                        </p>
-                    </div>
+                <div id="atras">
+                    <h2>Depoimento</h2>
+                    <p>"Sou pequena agricultura. Hoje temos um percentiual de desperdício em torno de 10%. Poder contar com um projeto desse tipo fará diferença.""
+                    </p>
                 </div>
             </div>
+        </div>
 
 
-        </section>
     </section>
+
 
 
     <div class="texto-impacto ">
@@ -218,17 +214,14 @@
     <footer>
         <div class="footer-content">
             <h3>Obrigado pela sua visita!</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit quam quaerat dolorem, aperiam nostrum,
-                aliquam repellendus consectetur laborum facere vel quidem eveniet. Id odit accusantium veritatis tenetur
-                adipisci delectus laboriosam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit quam quaerat dolorem, aperiam nostrum, aliquam repellendus consectetur laborum facere vel quidem eveniet. Id odit accusantium veritatis tenetur adipisci delectus laboriosam!</p>
             <ul class="socials">
 
                 <li>
                     <a href="#"><img src="./Imagens/img tratadas/icons/facebook.png">
                 </li>
                 <li>
-                    <a href="https://github.com/Wellpt/TechTeamProject" target="_blank"><img
-                            src="./Imagens/img tratadas/icons/git.png">
+                    <a href="https://github.com/Wellpt/TechTeamProject" target="_blank"><img src="./Imagens/img tratadas/icons/git.png">
                     </a>
                 </li>
                 <li>
@@ -236,8 +229,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://wa.me/5581988693599?text=Agradecemos+o+seu+contato!+%0d%0aEm+breve+voc%c3%aa+ser%c3%a1+atendido."
-                        target="_blank"><img src="./Imagens/img tratadas/icons/whatsapp.png"></a>
+                    <a href="https://wa.me/5581988693599?text=Agradecemos+o+seu+contato!+%0d%0aEm+breve+voc%c3%aa+ser%c3%a1+atendido." target="_blank"><img src="./Imagens/img tratadas/icons/whatsapp.png"></a>
                 </li>
                 <li>
                     <a href="#"><img src="./Imagens/img tratadas/icons/email.png"></a>
