--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </div>
 
             <ul class="nav-list">
-                <li><a href="/">Home</a></li>
-                <li><a href="./pontosColeta.html">Parceiros</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pontosColeta.html">Parceiros</a></li>
                 <li onclick="abrirLogin()"><a href="#">Login</a></li>
                 <li><a href="#footer">Contato</a></li>
             </ul>
