--- a/pontosColeta.html
+++ b/pontosColeta.html
@@ -30,10 +30,10 @@
             </div>
 
             <ul class="nav-list">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="/">Parceiros</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pontosColeta.html">Parceiros</a></li>
                 <li onclick="abrirLogin()"><a href="#">Login</a></li>
-                <li><a href="/">Contato</a></li>
+                <li><a href="#footer">Contato</a></li>
             </ul>
 
         </nav>
