feat lista parceiros

--- a/pontosColeta.html
+++ b/pontosColeta.html
@@ -114,7 +114,18 @@
             </div>
         </div>
 
+        <section class="listaPontosdeColeta">
+            <div class="retangEnderecos">
+                <p>Nome: Fulano de talpassado por variável</p> 
+                <p>Estado: Nome do estado</p>
+                <p>Cidade: Nome da cidade</p>
+                <a id="btnConnect" href="/link pra registrar ponto ao coletor"><img src="./Imagens/conecte-se.png" alt="botao pra conectar os dois"></a>
+            </div>
+            <div class="retangEnderecos"></div>
+            <div class="retangEnderecos"></div>
+            <div class="retangEnderecos"></div>
 
+        </section>
 
     </main>
 
