ajustes pagina pontosColeta

--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
 
         <div class="gallery-container">
             <div class="gallery-items"><a href="https://www.pensamentoverde.com.br/economia-verde/o-que-e-lixo-agricola-e-os-riscos-descarte-irregular/">Veja todo processo</a>
-                <img src="./Imagens/Compostagem tipos/1.jpg" alt="compostagem">
+                <img src="./Imagens/Compostagem tipos/1.jpg" alt="pessoas trabalhando com compostagem">
             </div>
-            <div class="gallery-items"><a href="https://summitagro.estadao.com.br/saude-no-campo/acoes-para-reduzir-o-desperdicio-de-alimentos-na-agricultura/#:~:text=Armazene%20os%20produtos%20de%20forma,embalagens%20espec%C3%ADficas%20para%20essa%20finalidade">Detalhes de armazenamento</a>
+            <div class="gallery-items"><a href="https://summitagro.estadao.com.br/saude-no-campo/acoes-para-reduzir-o-desperdicio-de-alimentos-na-agricultura/">Detalhes de armazenamento</a>
                 <img src="./Imagens/Compostagem tipos/2.jpg" alt="compostagem">
             </div>
             <div class="gallery-items"><a href="https://iusnatura.com.br/compostagem/">Tempo de descanso necessário</a>
