ajustes lista fornecedores css

--- a/pontosColeta.html
+++ b/pontosColeta.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="texto-cadastro">
-            <h2>Realize seu cadastro como doador parceiro!</h2>
+            <h2>Cadastre um ponto de coleta de resíduos orgânicos!</h2>
         </div>
 
         <button onclick="abrirdoacao()">Cadastrar Ponto de Coleta</button>
@@ -115,6 +115,10 @@
         </div>
 
         <section class="listaPontosdeColeta">
+            <div class="titulo">
+            <h2>Encontre estabelecimentos parceiros na sua região</h2>
+            </div>
+
             <div class="retangEnderecos">
                 <p>Nome: Fulano de talpassado por variável</p> 
                 <p>Estado: Nome do estado</p>
@@ -148,7 +152,7 @@
 
 
     <div class="texto-depoimento">
-        <h1>Depoimentos dos parceiros</h1>
+        <h2>Depoimentos dos parceiros</h2>
 
     </div>
 
@@ -227,12 +231,6 @@
 
 
     </section>
-
-
-
-    <div class="texto-impacto ">
-        <h1>O futuro depende de nós!</h1>
-    </div>
 
     <footer class="footer" id="footer">
 
