--- a/cadastroPonto.html
+++ b/cadastroPonto.html
@@ -61,6 +61,9 @@
                     <label for="nomefantasia">Nome fantasia/Razão Social:*</label>
                     <input type="text" id="nome" name="nomefantasia" placeholder="Mercado do José" required>
 
+                    <label for="telefone">Rua:*</label>
+                    <input type="number" id="telefone" name="telefone" required>
+
                     <label for="logradouro">Rua:*</label>
                     <input type="text" id="logradouro" name="logradouro" required>
 
