estilização da pagina do parceiro

--- a/pontosColeta.html
+++ b/pontosColeta.html
@@ -41,6 +41,10 @@
     <main>
         <div class="opacity">
             <div class="box">
+              <div class="text-box">
+                <p><i>Contra o desperdício!<br> Pela Sustentabilidade e a vida no nosso PLANETA!</i></p>
+                <h3>Seja um doador parceiro<br><a href="#" onclick="abrir()">Cadastre-se</a></h3>
+            </div>
             </div>
         </div>
 
