atualizações pagina doador

--- a/pontosColeta.html
+++ b/pontosColeta.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <nav class="menu">
-            <a class="logo" href="/">Logo</a>
+            <a class="logo" href="/">Sustenta-tech</a>
 
             <div class="mobile-menu">
                 <div class="line1"></div>
@@ -42,8 +42,9 @@
         <div class="opacity">
             <div class="box">
               <div class="text-box">
+                <h3>Seja um doador parceiro</h3>
                 <p><i>Contra o desperdício!<br> Pela Sustentabilidade e a vida no nosso PLANETA!</i></p>
-                <h3>Seja um doador parceiro<br><a href="#" onclick="abrir()">Cadastre-se</a></h3>
+                <a href="#" onclick="abrir()">Cadastre-se!</a>
             </div>
             </div>
         </div>
@@ -296,13 +297,14 @@
 
 
 
-        <script src="./js/header.js "></script>
-        <script src="./js/formulario.js "></script>
-        <script src="./js/cadEndereco.js "></script>
-        <script src="./js/header.js"></script>
-        <script src="./js/formulario.js"></script>
-        <script src="./js/login.js"></script>
-        <script src="./js/cadEndereco.js"></script>
+    <script src="./js/header.js"></script>
+    <script src="./js/formulario.js"></script>
+    <script src="./js/login.js"></script>
+    <script src="./js/carousel.js"></script>
+    <script src="./js/cadUsers.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/login.js"></script>
+    <script src="./js/botaoTopo.js"></script>
 
 
 
